# drwig-jrc-fbmc

./: .gitignore  CHANGELOG.md  README.md  fbmc_ofdm_validation.m  fbmc_ofdm_validation.py  main.py  pyproject.toml  requirements.txt  test_installation.py
.github/workflows/: python-app.yml
docs/: API.md  CONTRIBUTING.md  INSTALLATION.md  USAGE.md
